# django-articles

./: .gitignore  Makefile  Pipfile  manage.py  pyproject.toml
apps/articles/: __init__.py  forms.py  mixins.py  models.py  urls.py  views.py
apps/articles/management/commands/: add_data.py
apps/articles/templates/articles/: feed.html  index.html  post_detail.html  recommendations.html
apps/articles/templates/articles/includes/: comment.html  post.html
apps/users/: __init__.py  admin.py  forms.py  managers.py  mixins.py  models.py  urls.py  views.py
apps/users/templates/users/: followers.html  following.html  login.html  profile.html  profile_update.html  register.html  user_profile.html  users.html
apps/users/templatetags/: customtags.py
config/: asgi.py  settings.py  urls.py
static/css/: profile.css  style.css
static/js/: like.js  register.js
templates/: base.html
templates/includes/: header.html
