[tool.poetry]
name = "django-articles"
version = "0.1.0"
description = ""
authors = ["azureswastika <azureswastika@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
Pillow = "^8.2.0"
django-debug-toolbar = "^3.2.1"
requests = "^2.25.1"
python-lorem = "^1.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.5b2"
locust = "^1.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
